Modernize BeanShell JDK deprecation usage