@@ -142,8 +142,8 @@ public class BshClassManager
 			try {
 				// Try to load the module
 				// don't refer to it directly here or we're dependent upon it
-				Class clazz = Class.forName( "bsh.classpath.ClassManagerImpl" );
-				manager = (BshClassManager) clazz.newInstance();
+				Class<?> clazz = Class.forName( "bsh.classpath.ClassManagerImpl" );
+				manager = (BshClassManager) clazz.getDeclaredConstructor().newInstance();
 			} catch ( Exception e ) {
 				throw new InterpreterError("Error loading classmanager", e);
 			}
